<resources>
    <string name="app_name">MarsCafe</string>
    
    <!-- Tab titles -->
    <string name="tab_1">Bebidas Quentes</string>
    <string name="tab_2">Bebidas Frias</string>
    <string name="tab_3">Bolos</string>
    <string name="tab_4">Pastelaria</string>
    <string name="tab_5">Salgados</string>

    <!-- Bottom navigation titles -->
    <string name="page_1">Início</string>
    <string name="page_2">Cardápio</string>
    <string name="page_3">Carrinho</string>

    <string name="adicionar_ao_carrinho">Adicionar ao carrinho</string>
    <string name="unidades">Unidades</string>
    <string name="total">Total</string>
    <string name="fechar">Fechar</string>
    <string name="carrinho">Carrinho</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="sem_internet">Não foi possível conectar ao servidor verifique sua conexão com a internet e tente novamente mais tarde.</string>
    <string name="tentar_novamente">Tentar novamente</string>
</resources>
