<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.restaurantmenu.menu.MenuViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".menu.MenuFragment">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/menuTabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:tabMode="scrollable"
            app:tabTextColor="@color/chipText"
            app:tabSelectedTextColor="@color/chipSelectedText"
            app:tabBackground="@drawable/tab_background"
            app:tabIndicator="@android:color/transparent"
            app:tabPaddingStart="16dp"
            app:tabPaddingEnd="16dp"
            app:tabContentStart="24dp"
            app:tabTextAppearance="@style/tabLayoutTextAppearance"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_1"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_2"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_3"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_4"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_5"/>

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dishes_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menuTabLayout"
            app:listData="@{viewModel.dishes}"
            app:spanCount="2"
            tools:itemCount="12"
            tools:listitem="@layout/menu_grid_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>