<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.restaurantmenu.detail.bottomsheet.DetailBottomSheetViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/detail_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        android:background="@android:color/white"
        android:layout_gravity="bottom|end">

        <LinearLayout
            android:id="@+id/bottom_sheet_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/adicionar_ao_carrinho"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/ubuntu_medium" />

                <ImageButton
                    android:id="@+id/btn_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/fechar"
                    android:src="@drawable/ic_close" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unidades"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/ubuntu_medium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_remove_unit"
                        android:layout_width="50dp"
                        android:layout_height="58dp"
                        android:padding="13dp"
                        app:icon="@drawable/ic_remove"
                        style="@style/Widget.MaterialComponents.Button"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(viewModel.quantity)}"
                        android:textSize="24sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/ubuntu_medium"
                        tools:text="1"/>

                    <Button
                        android:id="@+id/btn_add_unit"
                        android:layout_width="50dp"
                        android:layout_height="58dp"
                        android:padding="13dp"
                        app:icon="@drawable/ic_add"
                        style="@style/Widget.MaterialComponents.Button"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="42dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/total"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="28sp"
                    android:fontFamily="@font/ubuntu_medium"/>

                <TextView
                    android:text="@{viewModel.total}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:fontFamily="@font/ubuntu_bold"
                    tools:text="R$14,90"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_add_to_cart"
                android:text="@string/adicionar_ao_carrinho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/Widget.MaterialComponents.Button"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>